[package]
name = "baedeker"
version = "0.1.4"
edition = "2021"
description = "Substrate network orchestration framework"
license = "MIT"

[dependencies]
bip39 = { version = "2.0.0", features = ["rand"] }
clap = { version = "4.5.7", features = ["derive"] }
hex = "0.4.3"
jrsonnet-cli = { version = "0.5.0-pre95", features = ["exp-preserve-order", "exp-bigint", "exp-null-coaelse"] }
jrsonnet-evaluator = { version = "0.5.0-pre95", features = ["exp-preserve-order", "exp-object-iteration", "exp-destruct", "exp-bigint", "exp-null-coaelse"] }
jrsonnet-gcmodule = "0.3.7"
jrsonnet-stdlib = { version = "0.5.0-pre95", features = ["exp-preserve-order", "exp-bigint", "exp-null-coaelse"] }
libp2p = { version = "0.53.2", features = ["ed25519", "identify"] }
parity-scale-codec = "3.6.12"
pathdiff = "0.2.1"
rand = "0.8.5"
sc-executor = "0.38.0"
serde_json = "1.0.117"
sp-core = { version = "33.0.1", features = ["std"] }
sp-io = "36.0.0"
sp-maybe-compressed-blob = "11.0.0"
sp-state-machine = "0.41.0"
tempfile = "3.10.1"
thiserror = "1.0.61"
tokio = "1.38.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chainql-core = "0.4.7"

[profile.release]
strip = true
opt-level = "s"
panic = "abort"
lto = "thin"
