[package]
name = "baedeker"
version = "0.1.5"
edition = "2021"
description = "Substrate network orchestration framework"
license = "MIT"

[dependencies]
bip39 = { version = "2.1.0", features = ["rand"] }
clap = { version = "4.5.26", features = ["derive"] }
hex = "0.4.3"
jrsonnet-cli = { version = "0.5.0-pre95", features = ["exp-preserve-order", "exp-bigint", "exp-null-coaelse"] }
jrsonnet-evaluator = { version = "0.5.0-pre95", features = ["exp-preserve-order", "exp-object-iteration", "exp-destruct", "exp-bigint", "exp-null-coaelse"] }
jrsonnet-gcmodule = "0.3.9"
jrsonnet-stdlib = { version = "0.5.0-pre95", features = ["exp-preserve-order", "exp-bigint", "exp-null-coaelse"] }
libp2p = { version = "0.55.0", features = ["ed25519", "identify"] }
parity-scale-codec = "3.6.12"
pathdiff = "0.2.3"
rand = "0.8.5"
serde_json = "1.0.135"
sp-core = { version = "35.0.0", features = ["std"] }
tempfile = "3.15.0"
thiserror = "2.0.11"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chainql-core = "0.4.8"

[profile.release]
strip = true
opt-level = "s"
panic = "abort"
lto = "thin"
